import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform

plugins {
  id 'todolist.java-application-conventions'
  id 'idea'
  id 'org.beryx.jlink' version '2.23.6'
}

repositories {
  mavenCentral()
}

def currentOS = DefaultNativePlatform.currentOperatingSystem
def platform
if (currentOS.isWindows()) {
  platform = 'win'
} else if (currentOS.isLinux()) {
  platform = 'linux'
} else if (currentOS.isMacOsX()) {
  platform = 'mac'
}

dependencies {
  implementation 'org.apache.commons:commons-text'
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.5.1'
  implementation 'com.jfoenix:jfoenix:9.0.10'

  // JavaFX modules for building on the current system
  implementation "org.openjfx:javafx-base:15.0.1:${platform}"
  implementation "org.openjfx:javafx-controls:15.0.1:${platform}"
  implementation "org.openjfx:javafx-graphics:15.0.1:${platform}"
  implementation "org.openjfx:javafx-fxml:15.0.1:${platform}"
}

def mainClassName = 'todolist.app.Main'
version = '0.3.0'

java {
  modularity.inferModulePath = true
}


def args = [
    "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
        "=ALL-UNNAMED",
    "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
        "=com.jfoenix",
    "--add-exports=javafx.controls/com.sun.javafx.binding=com.jfoenix",
    "--illegal-access=warn",
    "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
    "--add-opens=java.base/java.lang.reflect=com.jfoenix",
    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
        "=com.jfoenix",
    "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
    "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
    "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
    "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix"
]

application {
  //noinspection GroovyAccessibility
  mainModule = 'todolist.app.main'
  mainClass = mainClassName
  applicationDefaultJvmArgs = args
}

jlink {
  options = ['--strip-debug', '--compress', '2', '--no-header-files',
             '--no-man-pages']
  launcher {
    name = project.name
    noConsole = true
    jvmArgs = args
  }
  targetPlatform('win') {
    jdkHome = jdkDownload("https://github.com/AdoptOpenJDK" +
        "/openjdk15-binaries/releases/download/jdk-15.0.2%2B7" +
        "/OpenJDK15U-jdk_x64_windows_hotspot_15.0.2_7.zip")
    addExtraModulePath('jmods/javafx-jmods-15-win')
  }
  targetPlatform('linux') {
    jdkHome = jdkDownload("https://github.com/AdoptOpenJDK" +
        "/openjdk15-binaries/releases/download/jdk-15.0.2%2B7" +
        "/OpenJDK15U-jdk_x64_linux_hotspot_15.0.2_7.tar.gz")
    addExtraModulePath('jmods/javafx-jmods-15-linux')
  }
  targetPlatform('osx') {
    jdkHome = jdkDownload("https://github.com/AdoptOpenJDK" +
        "/openjdk15-binaries/releases/download/jdk-15.0.2%2B7" +
        "/OpenJDK15U-jdk_x64_mac_hotspot_15.0.2_7.tar.gz")
    addExtraModulePath('jmods/javafx-jmods-15-osx')
  }
  jpackage {
    targetPlatformName = 'win'
    installerType = 'msi'
    skipInstaller = false
    jvmArgs = args
    imageName = project.name
    installerName = project.name
    appVersion = version
    installerOptions = ['--win-menu', '--win-shortcut']
  }
}

compileJava {
  options.release = 15
}

jar {
  manifest {
    attributes 'Main-Class': mainClassName
  }
  from {
    configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
  }
}

test {
  useJUnitPlatform()
}

sourceSets {
  test {
    java {
      srcDir 'src/test'
    }
  }
  main {
    java {
      srcDir 'src/main'
    }
  }
}
